# tutor-contract

./: .gitignore  lib.rs  tutor.sol
artifacts/: Oracle.json  Oracle_metadata.json  TutorContract.json  TutorContract_metadata.json  TutorOracle.json  TutorOracle_metadata.json
rust/: Cargo.toml  lib.rs
