[package]
name = "tutor"
version = "0.1.0"
authors = ["Bjarki Gunnarsson <bgunnarsson@hi.is>"]
edition = "2021"

[dependencies]
ink = { version = "4.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"]}
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }


[dev-dependencies]
ink_e2e = { version = "4.3" }

[lib]
path = "lib.rs"

[features] 
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std"
]
ink-as-dependency = []
e2e-tests = []

